--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starch",
+  "name": "shown",
   "version": "0.0.1-alpha.1",
   "description": "Static, responsive SVG charts, without the need for client-side Javascript.",
   "main": "index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stephenhutchings/starch.git"
+    "url": "git+https://github.com/stephenhutchings/shown.git"
   },
   "keywords": [
     "pie",
@@ -28,9 +28,9 @@
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/stephenhutchings/starch/issues"
+    "url": "https://github.com/stephenhutchings/shown/issues"
   },
-  "homepage": "https://github.com/stephenhutchings/starch#readme",
+  "homepage": "https://github.com/stephenhutchings/shown#readme",
   "devDependencies": {
     "pug": "^3.0.2"
   },
