--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "shown",
   "version": "0.0.1-alpha.1",
-  "description": "Static, responsive SVG charts, without the need for client-side Javascript.",
+  "description": "Static, responsive charts, without the need for client-side Javascript.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "node ./src/lib/export.js"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "prepare": "node ./src/lib/export.js",
+    "docs": "documentation build ./src/index.js -f html -g -o docs -t ./docs-theme/index.cjs"
   },
   "repository": {
     "type": "git",
@@ -32,10 +33,18 @@
   },
   "homepage": "https://github.com/stephenhutchings/shown#readme",
   "devDependencies": {
+    "documentation": "^13.2.5",
+    "jest": "^26.6.3",
     "pug": "^3.0.2"
   },
-  "type": "module",
   "files": [
     "./src/**/*"
-  ]
+  ],
+  "type": "module",
+  "jest": {
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "./src/**"
+    ]
+  }
 }
