--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "documentation": "^13.2.5",
     "jest": "^26.6.3",
+    "pretty": "^2.0.0",
     "pug": "^3.0.2"
   },
   "files": [
