--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "shown",
   "version": "0.0.1-alpha.1",
-  "description": "Static, responsive charts, without the need for client-side Javascript.",
+  "description": "Statically-generated, responsive charts, without the need for client-side Javascript.",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest && jest-coverage-badges",
     "docs": "documentation build ./src/index.js -f html -g -o docs -t ./docs-theme/index.cjs"
   },
   "repository": {
@@ -30,10 +30,11 @@
   "bugs": {
     "url": "https://github.com/stephenhutchings/shown/issues"
   },
-  "homepage": "https://github.com/stephenhutchings/shown#readme",
+  "homepage": "https://stephenhutchings.github.io/shown",
   "devDependencies": {
     "documentation": "^13.2.5",
     "jest": "^26.6.3",
+    "jest-coverage-badges": "^1.1.2",
     "pretty": "^2.0.0",
     "pug": "^3.0.2"
   },
@@ -42,6 +43,9 @@
   ],
   "type": "module",
   "jest": {
+    "coverageReporters": [
+      "json-summary"
+    ],
     "collectCoverage": true,
     "collectCoverageFrom": [
       "./src/**"
