--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shown",
   "version": "0.1.0",
   "description": "Statically-generated, responsive charts, without the need for client-side Javascript.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest && jest-coverage-badges",
     "docs": "documentation build ./src/index.js -f html -g -o docs -t ./docs-theme/index.cjs"
