--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
         run: npm test
 
       - name: Create badge
-        run: npm badge
+        run: npm run badge
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
