--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,3 +19,7 @@ jobs:
         with:
           commit_message: Update coverage badge
           file_pattern: coverage.svg
+
+      - uses: tanmen/jest-reporter@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
