--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,3 +23,4 @@ jobs:
       - uses: tanmen/jest-reporter@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          result-file: coverage/result.json
