Update test action

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     }
   },
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest -json -o=coverage/result.json",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "badge": "make-coverage-badge --output-path=coverage.svg",
     "docs": "documentation build ./src/index.js -f html -g -o docs -t ./docs-theme/index.cjs",
     "prepare": "esbuild src/index.js src/css/shown.css --bundle --platform=node --target=node10.4 --outdir=dist --out-extension:.js=.cjs"
@@ -47,7 +47,7 @@
   "devDependencies": {
     "documentation": "^13.2.5",
     "esbuild": "^0.14.38",
-    "jest": "^26.6.3",
+    "jest": "^28.0.3",
     "make-coverage-badge": "^1.2.0",
     "pug": "^3.0.2"
   },
@@ -57,11 +57,16 @@
   ],
   "jest": {
     "coverageReporters": [
+      "json",
       "json-summary"
     ],
     "collectCoverage": true,
     "collectCoverageFrom": [
       "./src/**"
+    ],
+    "reporters": [
+      "default",
+      "github-actions"
     ]
   }
 }
