--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "url": "git+https://github.com/stephenhutchings/shown.git"
   },
   "keywords": [
+    "chart",
+    "plot",
     "pie",
     "bar",
     "line",
-    "area",
+    "scatter",
+    "simple",
+    "static",
     "donut",
-    "semantic",
-    "accessibility",
-    "a11y",
-    "flex",
     "no-js",
     "ssr",
     "ssg"
