--- a/package.json
+++ b/package.json
@@ -2,20 +2,26 @@
   "name": "shown",
   "version": "0.3.4",
   "description": "Statically-generated, responsive charts, without the need for client-side Javascript.",
+  "type": "module",
   "main": "dist/index.cjs",
   "module": "src/index.js",
-  "type": "module",
+  "types": "types/types.d.ts",
   "exports": {
     ".": {
       "require": "./dist/index.cjs",
       "import": "./src/index.js"
+    },
+    "./src/*": {
+      "import": "./src/*"
     }
   },
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "badge": "make-coverage-badge --output-path=coverage.svg",
-    "docs": "documentation build ./src/index.js -f html -g -o docs -t ./docs-theme/index.cjs",
-    "prepare": "esbuild src/index.js src/css/shown.css --bundle --platform=node --target=node10.4 --outdir=dist --out-extension:.js=.cjs"
+    "build:lib": "esbuild src/index.js src/css/shown.css --bundle --platform=node --target=node10.4 --outdir=dist --out-extension:.js=.cjs",
+    "build:docs": "documentation build ./src/index.js -f html -g -o docs -t ./docs-theme/index.cjs",
+    "build:types": "jsdoc -p -t node_modules/tsd-jsdoc/dist -r ./src -d types",
+    "prepublishOnly": "run-s build:**"
   },
   "repository": {
     "type": "git",
@@ -48,8 +54,11 @@
     "documentation": "^13.2.5",
     "esbuild": "^0.14.38",
     "jest": "^28.0.3",
+    "jsdoc": "^4.0.2",
     "make-coverage-badge": "^1.2.0",
-    "pug": "^3.0.2"
+    "npm-run-all": "^4.1.5",
+    "pug": "^3.0.2",
+    "tsd-jsdoc": "^2.5.0"
   },
   "files": [
     "src/**/*.js",
