--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "keywords": [
     "chart",
+    "svg",
     "plot",
     "pie",
     "bar",
@@ -54,7 +55,7 @@
     "documentation": "^13.2.5",
     "esbuild": "^0.14.38",
     "jest": "^28.0.3",
-    "jsdoc": "^4.0.2",
+    "jsdoc": "^3.6.11",
     "make-coverage-badge": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
