--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm ci
 
       - name: Build docs
-        run: npm run docs
+        run: npm run build:docs
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
