--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build:lib": "esbuild src/index.js src/css/shown.css --bundle --platform=node --target=node10.4 --outdir=dist --out-extension:.js=.cjs",
     "build:docs": "documentation build ./src/index.js -f html -g -o docs -t ./docs-theme/index.cjs",
     "build:types": "jsdoc -p -t node_modules/tsd-jsdoc/dist -r ./src -d types",
-    "prepublishOnly": "run-s build:**"
+    "prepublishOnly": "run-s build:**",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -59,6 +60,7 @@
     "make-coverage-badge": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
+    "standard-version": "^9.5.0",
     "tsd-jsdoc": "^2.5.0"
   },
   "files": [
@@ -79,5 +81,8 @@
       "default",
       "github-actions"
     ]
+  },
+  "standard-version": {
+    "releaseCommitMessageFormat": "Chore: Release {{currentTag}}"
   }
 }
