--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "badge": "make-coverage-badge --output-path=coverage.svg",
+    "build": "run-s build:**",
     "build:lib": "esbuild src/index.js src/css/shown.css --bundle --platform=node --target=node10.4 --outdir=dist --out-extension:.js=.cjs",
     "build:docs": "documentation build ./src/index.js -f html -g -o docs -t ./docs-theme/index.cjs",
     "build:types": "jsdoc -p -t node_modules/tsd-jsdoc/dist -r ./src -d types",
-    "prepublishOnly": "run-s build:**",
+    "prepublishOnly": "npm run build",
     "release": "standard-version"
   },
   "repository": {
