Update: Add test as prerelease script

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "build:docs": "documentation build ./src/index.js -f html -g -o docs -t ./docs-theme/index.cjs",
     "build:types": "jsdoc -p -t node_modules/tsd-jsdoc/dist -r ./src -d types",
     "prepublishOnly": "npm run build",
+    "prerelease": "npm test",
     "release": "standard-version"
   },
   "repository": {
