--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "badge": "make-coverage-badge --output-path=coverage.svg",
+    "watch": "nodemon --exec 'npm run build'",
     "build": "run-s build:**",
     "build:lib": "esbuild src/index.js src/css/shown.css --bundle --platform=node --target=node10.4 --outdir=dist --out-extension:.js=.cjs",
     "build:docs": "documentation build ./src/index.js -f html -g -o docs -t ./docs-theme/index.cjs",
@@ -60,6 +61,7 @@
     "jest": "^28.0.3",
     "jsdoc": "^3.6.11",
     "make-coverage-badge": "^1.2.0",
+    "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
     "standard-version": "^9.5.0",
@@ -87,5 +89,13 @@
   },
   "standard-version": {
     "releaseCommitMessageFormat": "Chore: Release {{currentTag}}"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/dist/**",
+      "**/docs/**",
+      "**/*.ts"
+    ],
+    "delay": 2500
   }
 }
