--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,6 +28,12 @@ jobs:
       - name: Build docs
         run: npm run build:docs
 
+      - name: Run tests
+        run: npm test
+
+      - name: Create badge
+        run: npm run badge
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
