--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16]
+        node-version: [14, 16]
 
     steps:
       - uses: actions/checkout@v3
@@ -22,11 +22,3 @@ jobs:
 
       - name: Run tests
         run: npm test
-
-      - name: Create badge
-        run: npm run badge
-
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Update coverage badge
-          file_pattern: coverage.svg
