--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "badge": "make-coverage-badge --output-path=coverage.svg",
+    "badge": "make-coverage-badge --output-path=docs/coverage.svg",
     "watch": "nodemon --exec 'npm run build'",
     "build": "run-s build:**",
     "build:lib": "esbuild src/index.js src/css/shown.css --bundle --platform=node --target=node10.4 --outdir=dist --out-extension:.js=.cjs",
