--- a/package.json
+++ b/package.json
@@ -58,12 +58,12 @@
   },
   "homepage": "https://stephenhutchings.github.io/shown",
   "devDependencies": {
-    "documentation": "^13.2.5",
+    "documentation": "13.2.5",
     "esbuild": "^0.14.54",
     "jest": "^28.1.3",
     "jsdoc": "^3.6.11",
     "make-coverage-badge": "^1.2.0",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.2",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
     "serve": "^14.2.1",
