--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "badge": "make-coverage-badge --output-path=docs/coverage.svg",
-    "dev": "run-p dev:serve dev:watch",
-    "dev:watch": "nodemon --exec 'npm run build'",
-    "dev:serve": "serve docs",
+    "watch": "nodemon --exec 'npm run build'",
     "build": "run-s build:**",
     "build:lib": "esbuild src/index.js src/css/shown.css --bundle --platform=node --target=node10.4 --outdir=dist --out-extension:.js=.cjs",
     "build:docs": "documentation build ./src/index.js -f html -g -o docs -t ./docs-theme/index.cjs",
@@ -59,14 +57,13 @@
   "homepage": "https://stephenhutchings.github.io/shown",
   "devDependencies": {
     "documentation": "^13.2.5",
-    "esbuild": "^0.14.54",
-    "jest": "^28.1.3",
+    "esbuild": "^0.14.38",
+    "jest": "^28.0.3",
     "jsdoc": "^3.6.11",
     "make-coverage-badge": "^1.2.0",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
-    "serve": "^14.2.1",
     "standard-version": "^9.5.0",
     "tsd-jsdoc": "^2.5.0"
   },
