--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
+    "serve": "^14.2.1",
     "standard-version": "^9.5.0",
     "tsd-jsdoc": "^2.5.0"
   },
@@ -99,8 +100,5 @@
       "**/*.ts"
     ],
     "delay": 2500
-  },
-  "dependencies": {
-    "serve": "^14.2.1"
   }
 }
